feat: add p1 account self-service
